 FIXED  : Better synchronization with EVR custom to improve playback smoothness
 FIXED  : 24 bits LPCM not properly play 
 FIXED  : Possible deadlock with Reclock
 FIXED  : memory leak in DXVA decoder (when opening new file)
 FIXED  : Support of framestep backward, even if the codec didn't support it natively (bug #2600542)


v1.2.908.0 - 30.November 2008
======================
 NEW	: support Multi-Monitor configuration, select Monitor for full-screen playback
 NEW	: creation of minidump when mpc crash
 NEW    : Simplified Chinese & Traditional Chinese translations
 NEW    : Pixel shader to convert BT601 -> BT701 (request #1911511)
 NEW    : YV12 Chroma Upsampling pixel shader added (http://forum.doom9.org/showthread.php?p=1184975#post1184975)
 NEW    : Recursively adding directories to the Playlist (feature request #2013805), add as New Menu item
 NEW    : Support for M2TS presentation graphics streams (only for EVR Custom and VMR9 Renderless)
 NEW    : Command lines "/startpos hh:mm:ss.ff", "/dvdpos title#chapter" and "/dvdpos title#hh:mm:ss.ff" to start playback to position
 NEW    : Differents icons for each format associated with mpc
 NEW    : Differents icons for each format associated with mpc
 NEW    : support H264 and AAC in FLV splitter
 CHANGED: Add VIRTKEY for "Save Thumbnails" (request #1964399)
 CHANGED: Store the settings for the internal DXVA/FFmpeg decoders in a different value than the other internal decoders. This makes the settings better interchangeable with old MPC builds. Also gives more room in the bitvector for adding more (FFmpeg based) decoders in the future.
 CHANGED: PAR correction option (for anamorphic video)in VSFilter and RealText support 
 CHANGED: liba52 & libdts library updated
 CHANGED: x64 edition of MPCVideodec is now build using GCC/MingW64 (improve performances)
 CHANGED: Gui option for Explorer Context menu->Files(see Formats Page)
 CHANGED: Gui option for Explorer Context menu->Directory(see Formats Page)